--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -95,22 +95,8 @@ p {
     font-size: 16px;
 }
 
-section {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-section img {
-    max-height: 200px;
-}
-
-section h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
+small {
+    font-size: 16px;
 }
 
 .hero {
